--- a/index.html
+++ b/index.html
@@ -3,19 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>robloks</title>
 </head>
 <body>
-  <h1>философия</h1>
-  git remote add origin https://github.com/ilaomelcuk963-eng/ilao.github.io.git
- git branch -M main 
-git push -u origin main
-echo "# ilao.github.io" >> README.md 
-git init 
-git add README.md 
-git commit -m "первый коммит" 
-git branch -M main 
-git remote add origin https://github.com/ilaomelcuk963-eng/ilao.github.io.git
- git push -u origin main
+    <h1>Roblox</h1>
+    <p>hello</p>
 </body>
 </html>
